--- a/index.html
+++ b/index.html
@@ -8,7 +8,34 @@
         <title>PaintJS</title>
     </head>
     <body>
+        <canvas id="jsCanvas" class="canvas"></canvas>
+        <div class="controls">
+            <div class="controls__range">
+                <input
+                    type="range"
+                    id="jsRange"
+                    min="0.1"
+                    max="5"
+                    value="2.5"
+                    step="0.1"
+                />
+            </div>
+            <div class="controls__btns">
+                <button id="jsMode">Fill</button>
+                <button id="jsSave">Save</button>
+            </div>
+            <div class="controls__colors" id="jsColors">
+                <div class="controls__colors" style="background-color: black"></div>
+                <div class="controls__colors" style="background-color: white"></div>
+                <div class="controls__colors" style="background-color: red"></div>
+                <div class="controls__colors" style="background-color: orange"></div>
+                <div class="controls__colors" style="background-color: yellow"></div>
+                <div class="controls__colors" style="background-color: greenyellow"></div>
+                <div class="controls__colors" style="background-color: skyblue"></div>
+                <div class="controls__colors" style="background-color: navy"></div>
+                <div class="controls__colors" style="background-color: rgb(107, 11, 107)"></div>
+            </div>
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
-
