--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                 />
             </div>
             <div class="controls__btns">
-                <button id="jsMode">Fill</button>
-                <button id="jsSave">Save</button>
+                <button id="jsMode">Fill</bu jsColortton>
+                <button id="jsSave">Save</bu jsColortton>
             </div>
-            <div class="controls__colors" id="jsColors">
-                <div class="controls__colors" style="background-color: black"></div>
-                <div class="controls__colors" style="background-color: white"></div>
-                <div class="controls__colors" style="background-color: red"></div>
-                <div class="controls__colors" style="background-color: orange"></div>
-                <div class="controls__colors" style="background-color: yellow"></div>
-                <div class="controls__colors" style="background-color: greenyellow"></div>
-                <div class="controls__colors" style="background-color: skyblue"></div>
-                <div class="controls__colors" style="background-color: navy"></div>
-                <div class="controls__colors" style="background-color: rgb(107, 11, 107)"></div>
+            <div class="controls__colors" id jsColor="jsColors">
+                <div class="controls__colors jsColor" style="background-color: black"></div>
+                <div class="controls__colors jsColor" style="background-color: white"></div>
+                <div class="controls__colors jsColor" style="background-color: red"></div>
+                <div class="controls__colors jsColor" style="background-color: orange"></div>
+                <div class="controls__colors jsColor" style="background-color: yellow"></div>
+                <div class="controls__colors jsColor" style="background-color: greenyellow"></div>
+                <div class="controls__colors jsColor" style="background-color: skyblue"></div>
+                <div class="controls__colors jsColor" style="background-color: navy"></div>
+                <div class="controls__colors jsColor" style="background-color: rgb(107, 11, 107)"></div>
             </div>
         </div>
         <script src="app.js"></script>
